change pipeline yml

--- a/templates/form.html
+++ b/templates/form.html
@@ -1,9 +1,9 @@
 <form action="" method="post">
     <fieldset>
-        <label for="playlist">Usuário</label>
+        <label for="customers">Usuário</label>
         <input type="text" name="user" placeholder="usuário">
         </br></br>
-        <label for="playlist">Email</label>
+        <label for="customers">Email</label>
         <input type="text" name="email" placeholder="email">
     </fieldset>
     <button type="submit">Gravar</button>
